tele health and header information with new requirments

--- a/App.Web/Views/DetailSubmission/Create.cshtml
+++ b/App.Web/Views/DetailSubmission/Create.cshtml
@@ -58,7 +58,7 @@
 
         <td class="title">
             সম্ভাব্য রোগীর নাম
-            <span data-toggle="tooltip" data-placement="top" title="Name of the patient showing symptoms<br>যে রোগীর মধ্যে উপসর্গগুলো দেখা দিয়েছে তার নাম"><img src="~/Content/tools.png" width="30" /></span>
+            <span data-toggle="tooltip" data-placement="top" title="Name of the patient showing symptoms<br>যে রোগীর মধ্যে উপসর্গগুলো দেখা দিয়েছে তার নাম"><img src="~/Content/toolsgray.png" width="30" /></span>
         </td>
         <td class="control">
             @Html.TextBoxFor(model => model.Name ,new { @class = "input-group form-control" })
@@ -86,7 +86,7 @@
     <tr>
         <td class="title">
             মোবাইল
-            <span data-toggle="tooltip" data-placement="top" title="Mobile number of the patient<br>রোগীর মোবাইল নম্বর"><img src="~/Content/tools.png" width="30" />
+            <span data-toggle="tooltip" data-placement="top" title="Mobile number of the patient<br>রোগীর মোবাইল নম্বর"><img src="~/Content/toolsgray.png" width="30" />
             </span>
         </td>
         <td class="control">
@@ -97,7 +97,7 @@
     <tr>
         <td class="title">
             জ্বর আছে ?
-            <span data-toggle="tooltip" data-placement="top" title="Does the patient have a fever?<br>রোগীর কি জ্বর আছে?"><img src="~/Content/tools.png" width="30" />
+            <span data-toggle="tooltip" data-placement="top" title="Does the patient have a fever?<br>রোগীর কি জ্বর আছে?"><img src="~/Content/toolsgray.png" width="30" />
             </span>
         </td>
         <td class="checkbox mb-3">
@@ -110,7 +110,7 @@
         <td class="title">
             শুকনো কাশি আছে ?
             <span data-toggle="tooltip" data-placement="top" title="Does the patient have a dry cough?
-                  রোগীর কি শুকনো কাঁশি হচ্ছে?"><img src="~/Content/tools.png" width="30" />
+                  রোগীর কি শুকনো কাঁশি হচ্ছে?"><img src="~/Content/toolsgray.png" width="30" />
             </span>
         </td>
         <td class="control">
@@ -121,7 +121,7 @@
         <td class="title">
             শ্বাস কষ্ট আছে ?
             <span data-toggle="tooltip" data-placement="top" title="Does the patient have any difficulty breathing?<br>রোগীর কি নিঃশ্বাস নিতে অসুবিধা হচ্ছে?">
-                <img src="~/Content/tools.png" width="30" />
+                <img src="~/Content/toolsgray.png" width="30" />
             </span>
         </td>
         <td class="control">
@@ -132,7 +132,7 @@
         <td class="title">
             বিদেশ ফেরত অথবা করোনা আক্রান্ত এলাকায় ভ্রমণ করেছিল কি না ?
             <span data-toggle="tooltip" data-placement="top" title="Have they recently returned from overseas or have they recently visited any COVID infected area?<br>রোগী কি বিগত কয়েকদিনের মধ্যে বিদেশ থেকে ফিরেছেন অথবা বিদেশ ফেরত কারো সাথে দেখা করেছেন?">
-                <img src="~/Content/tools.png" width="30" />
+                <img src="~/Content/toolsgray.png" width="30" />
             </span>
         </td>
         <td class="control">
@@ -143,7 +143,7 @@
         <td class="title">
             পিন (যার কাছ থেকে ডাটা নেয়া হয়েছে )
             <span data-toggle="tooltip" data-placement="top" title="PIN of the staff who has given you the data<br>যে কর্মী থেকে আপনি তথ্য নিয়েছেন তার পিন">
-                <img src="~/Content/tools.png" width="30" />
+                <img src="~/Content/toolsgray.png" width="30" />
             </span>
         </td>
         <td class="control">
@@ -155,7 +155,7 @@
         <td class="title">
             মন্তব্য
             <span data-toggle="tooltip" data-placement="right" title=" Enter any comments or feedback that you may have<br>আপনার কোনো মন্তব্য থাকলে তা লিখুন ">
-                <img src="~/Content/tools.png" width="30" />
+                <img src="~/Content/toolsgray.png" width="30" />
             </span>
         </td>
         <td class="control">
