--- a/App.Web/Views/WorkstationLeaveQuarantine/Create - Copy.cshtml
+++ b/App.Web/Views/WorkstationLeaveQuarantine/Create - Copy.cshtml
@@ -10,14 +10,15 @@
         OnFailure = "failure"
     };
 }
-
 @using (Ajax.BeginForm("CreateDetail", "WorkstationLeaveQuarantine", ajaxOpt))
 {
     @Html.ValidationSummary(true)
-
-    <h2>Staff PIN</h2>
     <table class="table table-striped table-bordered fixed_headers">
-      
+        <tr>
+            <th>
+                Staff PIN
+            </th>
+        </tr>
         <tr>
             <td>
                 @Html.TextBoxFor(model => model.PIN_, new { @placeholder = "Staff PIN", @class = "input-group form-control" })
@@ -40,7 +41,8 @@
     $(document).ready(function () {
 
         $("#save-submit").click(function () {
-            if ($("#PIN_").val() == '') {
+            if ($("#PIN_").val() == '')
+            {
                 alert('Please enter BRAC Staff PIN');
                 return false;
             }
